[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.6.0",
    "python-binance>=1.0.36",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "websocket-client>=1.9.0",
    "yfinance>=1.2.0",
]
