[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-binance>=1.0.19",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.1",
    "websocket-client>=1.6.0",
    "yfinance>=0.2.40",
]
